# constify

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/constify/: __init__.py  _freezeparams.py  freezeparams.py
tests/: __init__.py
tests/src/constify/: test_freezeparams.py
